--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
+    "@expo/html-elements": "^0.9.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.2.45",
     "expo": "~50.0.2",
     "expo-constants": "~15.4.5",
-    "expo-font": "~11.10.2",
+    "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
@@ -24,7 +25,7 @@
     "graphql": "^15.8.0",
     "graphql-request": "^6.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "typescript": "^5.3.0"
