--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "EzHome",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash01.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff",
+      "backgroundColor": "#000000",
       "plugins": [
         [
           "expo-image-picker",
